# car_ai_agent

./: .databricksignore  00_config.py  01_setup_demo_data.py  02_bronze.py  03_silver.py  03_silver.py.py  04_gold.py  05_Genie作成手順.py  06_AgentBricksナレッジアシスタント.py  07_AgentBricksマルチエージェントスーパーバイザー.py  DEMO_SCENARIO.md  README.md  app.yaml  databricks.yml  pyproject.toml  車両販売ダッシュボード.lvdash.json
app/backend/: .env.example  pyproject.toml
app/backend/app/: __init__.py  config.py  main.py
app/backend/app/routers/: admin.py  chat.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/frontend/src/: App.tsx
app/frontend/src/api/: index.ts
app/frontend/src/context/: CurrentUserContext.tsx
app/frontend/src/layouts/: AdminLayout.tsx  SalesLayout.tsx
app/frontend/src/store/: index.ts
app/frontend/src/types/: index.ts
src/car_ai_demo/: _metadata.py
src/car_ai_demo/__dist__/: index.html
src/car_ai_demo/__dist__/assets/: CustomerDetail-B5qsiKeq.js  CustomerDetail-B6GCxzgD.js  CustomerDetail-BI9uRN-9.js  CustomerDetail-BIosSIHc.js  CustomerDetail-By5nP5ds.js  CustomerDetail-C4vEfeRs.js  CustomerDetail-CLikg4kg.js  CustomerDetail-C_sc8Hpy.js  CustomerDetail-Cer7fq9d.js  CustomerDetail-Cgo9E3UG.js  CustomerDetail-Czf7IhRY.js  CustomerDetail-DT2h_cWA.js  CustomerDetail-DW-GXpod.js  CustomerDetail-DbMtvGSP.js  CustomerDetail-DheXTBQQ.js  CustomerDetail-WW46aZw0.js  CustomerDetail-hoe-2MtU.js  CustomerDetail-x31Whlbw.js  CustomerDetail-zT68zv68.js  (+34 more)
src/car_ai_demo/backend/: app.py  config.py  database.py  llm.py
(+13 files in other folders)
