[project]
name = "car-ai-demo"
version = "0.1.0"
description = "Car AI Demo - AI-powered vehicle recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.30.0",
    "openai>=1.52.0",
    "mlflow>=2.15.0",
    "httpx>=0.27.0",
]

[tool.apx.metadata]
app-name = "car-ai-demo"
app-slug = "car_ai_demo"
app-entrypoint = "car_ai_demo.backend.app:app"
api-prefix = "/api"
metadata-path = "src/car_ai_demo/_metadata.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["src/car_ai_demo/__dist__"]

[tool.hatch.build.targets.wheel]
packages = ["src/car_ai_demo"]
